// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStyle() renders only one breakpoint resolution renders only the recived ones 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`propToStyle() renders only one breakpoint resolution renders two or more breakpoints resolution 1`] = `
Array [
  Array [
    "@media only screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media only screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
]
`;
